--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ button {
   overflow: hidden;
   border: 0 !important;
 }
-button:not(.nav-button,.xd)::after {
+button:not(.nav-button,.xd,.toggler-button)::after {
   content: "";
   position: absolute;
   width: 100%;
@@ -98,7 +98,7 @@ button:not(.nav-button,.xd)::after {
 button:not(.nav-button,.xd):hover::after {
   left: 0 !important;
 }
-button:not(.toggler-button):hover .like-before {
+button:not(.toggler-button):hover .like-after {
   left: 0;
 }
 .section-header {
@@ -171,7 +171,7 @@ header nav button a {
   position: relative;
   z-index: 1;
 }
- .like-before {
+ .like-after{
   height: 43.992px;
   width: 125px;
   background-color: #ff5c97;
@@ -275,29 +275,29 @@ header nav button a {
   left: -100%;
 }
 .landing .row p {
-  transition: all 0.5s linear 0.2s ;
-  -webkit-transition: all 0.5s linear 0.2s ;
-  -moz-transition: all 0.5s linear 0.2s ;
-  -ms-transition: all 0.5s linear 0.2s ;
-  -o-transition: all 0.5s linear 0.2s ;
+  transition: all 0.5s linear 0.15s ;
+  -webkit-transition: all 0.5s linear 0.15s ;
+  -moz-transition: all 0.5s linear 0.15s ;
+  -ms-transition: all 0.5s linear 0.15s ;
+  -o-transition: all 0.5s linear 0.15s ;
 }
 .landing .row button {
-  transition: all 0.5s linear 0.4s ;
-  -webkit-transition: all 0.5s linear 0.4s ;
-  -moz-transition: all 0.5s linear 0.4s ;
-  -ms-transition: all 0.5s linear 0.4s ;
-  -o-transition: all 0.5s linear 0.4s ;
+  transition: all 0.5s linear 0.18s ;
+  -webkit-transition: all 0.5s linear 0.18s ;
+  -moz-transition: all 0.5s linear 0.18s ;
+  -ms-transition: all 0.5s linear 0.18s ;
+  -o-transition: all 0.5s linear 0.18s ;
 }
 .landing .animate-xr {
   position: relative;
   right: -100%;
-  transition: all 0.5s linear 0.4s;
-  -webkit-transition: all 0.5s linear 0.4s;
-  -moz-transition: all 0.5s linear 0.4s;
-  -ms-transition: all 0.5s linear 0.4s;
-  -o-transition: all 0.5s linear 0.4s;
+  transition: all 0.5s linear 0.18s;
+  -webkit-transition: all 0.5s linear 0.18s;
+  -moz-transition: all 0.5s linear 0.18s;
+  -ms-transition: all 0.5s linear 0.18s;
+  -o-transition: all 0.5s linear 0.18s;
 }
-.like-before {
+.like-after {
   transition: all 0.3s ease-out 0s;
 
 }
@@ -326,8 +326,8 @@ header nav button a {
   background-repeat: no-repeat;
   top: 26%;
   left: 35%;
-  animation: animateHeart 1.3s infinite;
-  -webkit-animation: animateHeart 1.3s infinite;
+  animation: animateHeart 1s infinite alternate;
+  -webkit-animation: animateHeart 1s infinite alternate;
 }
 .landing::after {
   background-image: url(../images/plus1.webp);
@@ -339,52 +339,18 @@ header nav button a {
   background-repeat: no-repeat;
   bottom: 3%;
   left: 30%;
-  animation: animateHeart 1.3s infinite;
-  -webkit-animation: animateHeart 1.3s infinite;
+  animation: animateHeart 1s infinite alternate;
+  -webkit-animation: animateHeart 1s infinite alternate;
 }
 @keyframes animateHeart {
   0% {
-    transform: scale(1.15);
-    -webkit-transform: scale(1.15);
-    -moz-transform: scale(1.15);
-    -ms-transform: scale(1.15);
-    -o-transform: scale(1.15);
-  }
-  20% {
-    transform: scale(1.25);
-    -webkit-transform: scale(1.25);
-    -moz-transform: scale(1.25);
-    -ms-transform: scale(1.25);
-    -o-transform: scale(1.25);
-  }
-  30% {
-    transform: scale(1.3);
-    -webkit-transform: scale(1.3);
-    -moz-transform: scale(1.3);
-    -ms-transform: scale(1.3);
-    -o-transform: scale(1.3);
-  }
-  40% {
-    transform: scale(1.25);
-    -webkit-transform: scale(1.25);
-    -moz-transform: scale(1.25);
-    -ms-transform: scale(1.25);
-    -o-transform: scale(1.25);
-  }
-  50% {
-    transform: scale(1.2);
-    -webkit-transform: scale(1.2);
-    -moz-transform: scale(1.2);
-    -ms-transform: scale(1.2);
-    -o-transform: scale(1.2);
-  }
-  75% {
-    transform: scale(1.1);
-    -webkit-transform: scale(1.1);
-    -moz-transform: scale(1.1);
-    -ms-transform: scale(1.1);
-    -o-transform: scale(1.1);
-  }
+    transform: scale(1.4);
+    -webkit-transform: scale(1.4);
+    -moz-transform: scale(1.4);
+    -ms-transform: scale(1.4);
+    -o-transform: scale(1.4);
+}
+
   100% {
     transform: scale(1);
     -webkit-transform: scale(1);
@@ -537,10 +503,17 @@ body section:nth-of-type(5) .like-before {
   border-radius: 0 10px 0 0;
   padding: 29px 10px 10px 50px;
 }
-/* start of section sex */
+/* start of section six */
 body section:nth-of-type(6) {
   overflow-x: hidden;
   position: relative;
+}
+body section:nth-of-type(6) .carousel-item {
+  transition: all 0.3s ease 0s;
+  -webkit-transition: all 0.3s ease 0s;
+  -moz-transition: all 0.3s ease 0s;
+  -ms-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
 }
 body section:nth-of-type(6) .section-header {
   line-height: 1.3;
